--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,11 @@
         android:theme="@style/Theme.StarWarsInfo"
         tools:targetApi="31">
         <activity
+            android:name=".view.activities.FilmsDetail"
+            android:exported="true" />
+        <activity
             android:name=".view.activities.PlanetDetails"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".view.activities.Splash"
             android:exported="true">
@@ -29,7 +32,7 @@
         </activity>
         <activity
             android:name=".view.activities.MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
